--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-header {
+.cabecera {
 	display: flex;
 	align-items: center;
 	background: #f9f9f9;
@@ -7,26 +7,30 @@ header {
 	padding-right: 2rem;
 }
 
-header nav ul {
+.menu-lista {
 	display: flex;
 }
 
-header nav ul li {
+.menu-item {
 	list-style: none;
 }
 
-header nav ul li a {
+.menu-item:last-child .menu-link {
+  margin-right: 0;
+}
+
+.menu-link {
 	color: #808080;
 	margin-right: 1.25rem;
 	text-decoration: none;
 	text-transform: lowercase;
 }
 
-header nav ul li a#activo {
+.menu-link#activo {
 	color: #333333;
 	font-weight: bold;
 }
 
-header nav ul li a:hover {
+.menu-link:hover {
 	text-decoration: underline;
 }
