--- a/assets/css/personas.css
+++ b/assets/css/personas.css
@@ -1,5 +1,29 @@
 .personas {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 3rem;
+	display: flex;
+	justify-content: space-around;
+	padding-top: 3rem;
+}
+
+@media screen and (min-width: 0) {
+	.personas {
+		margin-bottom: 2rem;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.personas {
+		margin-bottom: 0;
+	}
+}
+
+@media screen and (min-width: 0) {
+	.personas {
+		flex-direction: column;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.personas {
+		flex-direction: row;
+	}
 }
